--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,7 +14,7 @@ html {
         height: 100vh;
         width: 100vw;
         margin: 0;
-        background-color: #0286F2;
+        background-color: #f1f1f1;
         overflow: hidden;
     }
 
