--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,6 +6,7 @@
 }
 
 html {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(16px, 4vh, 32px);
 
     body {
@@ -28,5 +29,14 @@ html {
         image-rendering: pixelated;
         position: relative;
         z-index: 0;
+    }
+
+    .html-renderer {
+        * {
+            color: #ffffff;
+            font-size: 0.75rem;
+            font-weight: bold;
+            text-shadow: 0.1rem 0.1rem 0rem #000000;
+        }
     }
 }
