--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -31,12 +31,10 @@ html {
         z-index: 0;
     }
 
-    .html-renderer {
-        * {
-            color: #ffffff;
-            font-size: 0.75rem;
-            font-weight: bold;
-            text-shadow: 0.1rem 0.1rem 0rem #000000;
-        }
+    .object-label {
+        color: #ffffff;
+        font-size: 0.75rem;
+        font-weight: bold;
+        text-shadow: 0.1rem 0.1rem 0rem #000000;
     }
 }
